--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ header{
 	margin: 0 auto;
 }
 
-#logo {
+.logo {
 	margin: 0px 0 0 14px;
 	padding-top:8px;
 	padding-right: 908px;
@@ -127,13 +127,13 @@ header{
 	background: #e9e9e9 url(../images/log-bg.jpg);
 }
 
-#languages {
+.languages {
 	position: absolute;
 	top: 5px;
 	padding-left: 53%;
 }
 
-#languages img {
+.languages img {
 	margin: 3px;
 	border: 0px;
 }
