--- a/css/style.css
+++ b/css/style.css
@@ -46,20 +46,20 @@ a {
 	text-decoration: underline;
 }
 
+.clear {
+	clear:both;
+	display: block;
+}
 header{
-	height: 25%;
-}
-
-#wrap{
-	width: 100%;
 	background: url(../images/main-bg.jpg) repeat-x left top;
-	text-align:center;
 }
 
-#headerSec{
-	width: 1000px;
+.wrap{
+	width: 960px;	
+	text-align:center;
 	margin: 0 auto;
 }
+
 
 .logo {
 	margin: 0px 0 0 14px;
@@ -138,27 +138,107 @@ header{
 	border: 0px;
 }
 
-#example-one { background: #eee; padding: 10px; margin: 0 0 15px 0; -moz-box-shadow: 0 0 5px #666; -webkit-box-shadow: 0 0 5px #666; }
+.tabContent {
+height: 250px;
+overflow: hidden;
+}
 
-#example-one .nav { overflow: hidden; margin: 0 0 10px 0; }
-#example-one .nav li { width: 97px; float: left; margin: 0 10px 0 0; }
-#example-one .nav li.last { margin-right: 0; }
-#example-one .nav li a { display: block; padding: 5px; background: #959290; color: white; font-size: 10px; text-align: center; border: 0; }
-#example-one .nav li a:hover { background-color: #111; }
+.form-input-name{
+  width: 50%;
+  text-align: right;
+}
 
-#example-one ul { list-style: none; }
-#example-one ul li a { display: block; border-bottom: 1px solid #666; padding: 4px; color: #666; }
-#example-one ul li a:hover, #example-one ul li a:focus { background: #fe4902; color: white; }
-#example-one ul li:last-child a { border: none; }
+.register_table tr td{
+  padding: 10px;
+ /* border-bottom: 1px solid #e0e0e0; */
+  border-top: 1px solid #fff;
+}
 
-#example-one li.nav-one a.current, ul.featured li a:hover { background-color: #0575f4; color: white; }
-#example-one li.nav-two a.current, ul.core li a:hover { background-color: #d30000; color: white; }
-#example-one li.nav-three a.current, ul.jquerytuts li a:hover { background-color: #8d01b0; color: white; }
-#example-one li.nav-four a.current, ul.classics li a:hover { background-color: #FE4902; color: white; }
-.hide { position: absolute; top: -9999px; left: -9999px; }
+.register_table tr:last-child td{
+  padding: 10px;
+  border-bottom: none;
+  border-top: 1px solid #fff;
+}
+
+input[type=text]:focus, textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=tel]:focus{
+  color: #000;
+  border: 1px solid #96a641;
+}
+
+input[type=submit]{
+background: #a4b357; /* Old browsers */
+background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a4b357), color-stop(100%,#75890c)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Opera11.10+ */
+background: -ms-linear-gradient(top, #a4b357 0%,#75890c 100%); /* IE10+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
+background: linear-gradient(top, #a4b357 0%,#75890c 100%); /* W3C */
+padding: 10px;
+font-size: 20px;
+font-weight: normal;
+width: 250px;
+color: #fff;
+border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+cursor: pointer;
+text-shadow: 1px 1px 1px #4b4b4b;
+}
+
+input[type=submit]:hover{
+background: #e4efc0; /* Old browsers */
+background: -moz-linear-gradient(top, #e4efc0 0%, #abbd73 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e4efc0), color-stop(100%,#abbd73)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Opera11.10+ */
+background: -ms-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* IE10+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4efc0', endColorstr='#abbd73',GradientType=0 ); /* IE6-9 */
+background: linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* W3C */
+color: #fff;
+text-shadow: 1px 1px 1px #4b4b4b;
+}
+
+input[type=text], input[type=email], input[type=number], input[type=password], input[type=tel]{
+background: #f7f7f7; /* Old browsers */
+background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Opera11.10+ */
+background: -ms-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* IE10+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+background: linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* W3C */
+box-shadow:inset 1px 1px 3px #d8d8d8;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: normal;
+  width: 250px;
+  color: #d9d9d9;
+  height: 20px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border: 1px solid #f0f0f0;
+  text-shadow: -1px -1px 1px #fff;
+}
+
+textarea{
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  padding: 10px;
+  font-size: 16px;
+  color: #d9d9d9;
+  font-family: Helvetica, Arial;
+  width: 250px;
+}
 
 @media only screen and (max-width: 479px), screen and (max-device-width: 479px) {
 	#right_tab {
 		width: 15%;
+	}
+	
+	#menucont{
+		width:30%;
 	}
 }
