--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ a {
 	clear:both;
 	display: block;
 }
+
 header{
 	background: url(../images/main-bg.jpg) repeat-x left top;
 }
@@ -60,11 +61,16 @@ header{
 	margin: 0 auto;
 }
 
-
+.top {
+	float: left;
+	clear: both;
+	position: relative; 
+	width: 100%;
+}
 .logo {
-	margin: 0px 0 0 14px;
-	padding-top:8px;
-	padding-right: 908px;
+	margin-top: 14px;
+	float: left; 
+	padding: 10px 0 10px 10px;
 }
 	
 #menucont {		
@@ -73,12 +79,15 @@ header{
 	z-index: 2000;
 	text-align:center;
 	border-bottom: 2px solid #272727;
-
+	float: left; 
 }
 
+
+/* Formular de logare */
 #loginform{
 	display:none;
 }	
+
 .arata#loginform {
 	display: block;
 }
@@ -116,21 +125,38 @@ header{
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);  
 }  
 
+.loginform  input[type=userName], .loginform input[type=password]{
+	background: #f7f7f7; /* Old browsers */
+	background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* W3C */
+	box-shadow:inset 1px 1px 3px #d8d8d8;
+	font-size: 12px;
+	font-weight: normal;
+	width: 100px;
+	color: #d9d9d9;
+	height: 20px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border: 1px solid #f0f0f0;
+	text-shadow: -1px -1px 1px #fff;
+}
+
 #right_tab{
 	width: 28%;
 	float: right;
-	top: 0px;
-	position: relative;
-	top: -167px;
 	border: rgba(92, 84, 84, 0.47) 1px solid;
 	border-radius: 5px;
 	background: #e9e9e9 url(../images/log-bg.jpg);
 }
 
 .languages {
-	position: absolute;
-	top: 5px;
-	padding-left: 53%;
+	float: right;
 }
 
 .languages img {
@@ -160,85 +186,119 @@ overflow: hidden;
   border-top: 1px solid #fff;
 }
 
-input[type=text]:focus, textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=tel]:focus{
+input[type=text]:focus,input[type=userName]:focus, textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=tel]:focus{
   color: #000;
   border: 1px solid #96a641;
 }
 
 input[type=submit]{
-background: #a4b357; /* Old browsers */
-background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a4b357), color-stop(100%,#75890c)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Opera11.10+ */
-background: -ms-linear-gradient(top, #a4b357 0%,#75890c 100%); /* IE10+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
-background: linear-gradient(top, #a4b357 0%,#75890c 100%); /* W3C */
-padding: 10px;
-font-size: 20px;
-font-weight: normal;
-width: 250px;
-color: #fff;
-border-radius: 4px;
--moz-border-radius: 4px;
--webkit-border-radius: 4px;
-cursor: pointer;
-text-shadow: 1px 1px 1px #4b4b4b;
+	background: #a4b357; /* Old browsers */
+	background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a4b357), color-stop(100%,#75890c)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #a4b357 0%,#75890c 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #a4b357 0%,#75890c 100%); /* W3C */
+	padding: 10px;
+	font-size: 20px;
+	font-weight: normal;
+	width: 250px;
+	color: #fff;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	cursor: pointer;
+	text-shadow: 1px 1px 1px #4b4b4b;
 }
 
 input[type=submit]:hover{
-background: #e4efc0; /* Old browsers */
-background: -moz-linear-gradient(top, #e4efc0 0%, #abbd73 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e4efc0), color-stop(100%,#abbd73)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Opera11.10+ */
-background: -ms-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* IE10+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4efc0', endColorstr='#abbd73',GradientType=0 ); /* IE6-9 */
-background: linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* W3C */
-color: #fff;
-text-shadow: 1px 1px 1px #4b4b4b;
+	background: #e4efc0; /* Old browsers */
+	background: -moz-linear-gradient(top, #e4efc0 0%, #abbd73 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e4efc0), color-stop(100%,#abbd73)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4efc0', endColorstr='#abbd73',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* W3C */
+	color: #fff;
+	text-shadow: 1px 1px 1px #4b4b4b;
 }
-
+/*
 input[type=text], input[type=email], input[type=number], input[type=password], input[type=tel]{
-background: #f7f7f7; /* Old browsers */
-background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Opera11.10+ */
-background: -ms-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* IE10+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-background: linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* W3C */
-box-shadow:inset 1px 1px 3px #d8d8d8;
-  padding: 10px;
-  font-size: 16px;
-  font-weight: normal;
-  width: 250px;
-  color: #d9d9d9;
-  height: 20px;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border: 1px solid #f0f0f0;
-  text-shadow: -1px -1px 1px #fff;
+	background: #f7f7f7; /* Old browsers */
+	background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* W3C */
+	box-shadow:inset 1px 1px 3px #d8d8d8;
+	padding: 10px;
+	font-size: 16px;
+	font-weight: normal;
+	width: 250px;
+	color: #d9d9d9;
+	height: 20px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border: 1px solid #f0f0f0;
+	text-shadow: -1px -1px 1px #fff;
 }
+*/
+
 
 textarea{
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  padding: 10px;
-  font-size: 16px;
-  color: #d9d9d9;
-  font-family: Helvetica, Arial;
-  width: 250px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	padding: 10px;
+	font-size: 16px;
+	color: #d9d9d9;
+	font-family: Helvetica, Arial;
+	width: 250px;
 }
 
-@media only screen and (max-width: 479px), screen and (max-device-width: 479px) {
+
+/*Mai jos ai <960px. Rescrii doar ce trebuie rescris, nu tot. doar clasele care le vrei ajustate.*/
+@media only screen and (max-width: 959px), screen and (max-device-width: 959px) {
+	
+	.wrap{
+		width:100%;
+	}
+	
 	#right_tab {
 		width: 15%;
 	}
 	
 	#menucont{
-		width:30%;
+		width:45%;
 	}
 }
+
+/*Mai jos ai <800px, rescrii aici ce ai pus sub 960 si nu se mai potriveste si la rezolutii mai mici*/
+@media only screen and (max-width: 799px), screen and (max-device-width: 799px) {
+
+	#right_tab {
+		width: 15%;
+	}
+	
+	#menucont{
+		width:55%;
+	}
+}
+
+/*Acelasi lucru si aici, pt rezolutii f mici*/
+@media only screen and (max-width: 479px), screen and (max-device-width: 479px) {
+	#right_tab {
+		width: 100%;
+	}
+	
+	#menucont{
+		width:100%;
+	}
+}
+
+
