--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,12 @@ body {
 	 font-family: Arial, Helvetica, sans-serif;
 	 font-size: 12px;
 	 color: #262626;
-	 background: #ffffff;
-	 }
+}
+
+h1 {
+	font-size: 200%;
+	margin-bottom: 30px;
+}
 	 
 a {	
 	text-decoration: underline;
@@ -51,13 +55,35 @@ a {
 	display: block;
 }
 
-header{
-	background: url(../images/main-bg.jpg) repeat-x left top;
+header{	
+	background: #87e0fd url(../images/airplane.png) no-repeat right center;
+	width: 100%;
+	padding-bottom: 20px;
+	border-bottom: 1px #05abe0 solid;
+	margin: 0 0 2% 0;
+}
+
+section {
+	width: 65%;
+	float: left; 
+}
+
+section.full {
+	width: 100%;
+}
+
+section p {
+	text-align: left;
+	margin: 1.5em 0;
+}
+
+aside {
+	width: 30%;
+	float: right;
 }
 
 .wrap{
 	width: 960px;	
-	text-align:center;
 	margin: 0 auto;
 }
 
@@ -72,13 +98,22 @@ header{
 	float: left; 
 	padding: 10px 0 10px 10px;
 }
+
+.logo img {
+	display: inline-block;
+}
+
+.logo a {
+	color: #fff; 
+	font-size: 160%;
+	text-decoration: none;
+	font-weight: bold;
+}
 	
 #menucont {		
-	width: 70%;
+	width: 65%;
 	position: relative;
 	z-index: 2000;
-	text-align:center;
-	border-bottom: 2px solid #272727;
 	float: left; 
 }
 
@@ -92,22 +127,47 @@ header{
 	display: block;
 }
 
-.loginform {
-	padding-top: 8%;
-	padding-bottom: 8%;
-	display:none;
+form {
+	width: 80%;
+	float: left; 
+}
+form div {
+	width: 100%; 
+	margin-bottom: 15px;
+	float: left;
+}
+.eroare {
+	color: red; 
+}
+form div label {
+	text-align: left;
+	color: #aaa; 
+	padding-bottom: 5px;
+	width: 100%;
+	float: left; 
+}
+form input, form textarea, form select {
+	width: 90%;
+	height: 25px;
+	line-height: 25px;
+	padding: 0 5%;
+	border: 1px #aaa solid;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
 
-.loginform input:not([type=submit]) {  
-    padding: 5px;  
-    margin-right: 10px;  
-    border: 1px solid rgba(0, 0, 0, 0.3);  
-    border-radius: 3px;  
-    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1),   
-                0px 1px 0px 0px rgba(250, 250, 250, 0.5) ; 
-}  
+form select {
+	width: 100%;
+	padding: 0;
+}
 
-.loginform input[type=submit] {  
+form textarea {
+	height: 50px;
+	line-height: normal;
+}
+
+form input[type=submit] {  
     border: 1px solid rgba(0, 0, 0, 0.3);  
     background: #64c8ef; /* Old browsers */  
     background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */  
@@ -119,13 +179,55 @@ header{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */  
     color: #fff;  
     padding: 5px 15px;  
+    height: 30px;
     margin-right: 0;  
     margin-top: 15px;  
+    margin-bottom: 15px;
     border-radius: 3px;  
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);  
+    width: auto;
+} 
+
+.loginForm {
+	padding-top: 8%;
+	padding-bottom: 8%;
+	width: 80%;
+	margin: 0 auto;
+	float: none;
+}
+
+#right_tab .login_links {
+	color: #64c8ef;
+	text-decoration: none;
+	margin: 0 10px; 
+	font-weight: bold;
+}
+
+.loginForm div {
+	margin-bottom: 2px;
+}
+
+.loginForm label {
+	width: 40%;
+	float: left;
+	text-align: right;
+	height: 30px;
+	line-height: 30px;
+}
+
+.loginForm input:not([type=submit]) {  
+    padding: 5px;  
+    width: 40%;
+    margin-right: 10px;  
+    border: 1px solid rgba(0, 0, 0, 0.3);  
+    border-radius: 3px;  
+    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1),   
+                0px 1px 0px 0px rgba(250, 250, 250, 0.5) ; 
 }  
 
-.loginform  input[type=userName], .loginform input[type=password]{
+ 
+
+.loginForm  input[type=userName], .loginForm input[type=password]{
 	background: #f7f7f7; /* Old browsers */
 	background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
@@ -148,11 +250,20 @@ header{
 }
 
 #right_tab{
-	width: 28%;
+	width: 30%;
 	float: right;
-	border: rgba(92, 84, 84, 0.47) 1px solid;
+	border: #aaa 1px solid;
 	border-radius: 5px;
 	background: #e9e9e9 url(../images/log-bg.jpg);
+	height: 318px;
+	text-align: center;
+}
+
+#right_tab h2 {
+	width: 100%;
+	padding: 10% 0;
+	font-size: 140%; 
+	color: #333;
 }
 
 .languages {
@@ -186,80 +297,6 @@ overflow: hidden;
   border-top: 1px solid #fff;
 }
 
-input[type=text]:focus,input[type=userName]:focus, textarea:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=tel]:focus{
-  color: #000;
-  border: 1px solid #96a641;
-}
-
-input[type=submit]{
-	background: #a4b357; /* Old browsers */
-	background: -moz-linear-gradient(top, #a4b357 0%, #75890c 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a4b357), color-stop(100%,#75890c)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #a4b357 0%,#75890c 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #a4b357 0%,#75890c 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4b357', endColorstr='#75890c',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #a4b357 0%,#75890c 100%); /* W3C */
-	padding: 10px;
-	font-size: 20px;
-	font-weight: normal;
-	width: 250px;
-	color: #fff;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	cursor: pointer;
-	text-shadow: 1px 1px 1px #4b4b4b;
-}
-
-input[type=submit]:hover{
-	background: #e4efc0; /* Old browsers */
-	background: -moz-linear-gradient(top, #e4efc0 0%, #abbd73 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e4efc0), color-stop(100%,#abbd73)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4efc0', endColorstr='#abbd73',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #e4efc0 0%,#abbd73 100%); /* W3C */
-	color: #fff;
-	text-shadow: 1px 1px 1px #4b4b4b;
-}
-/*
-input[type=text], input[type=email], input[type=number], input[type=password], input[type=tel]{
-	background: #f7f7f7; /* Old browsers */
-	background: -moz-linear-gradient(top, #f7f7f7 0%, #ffffff 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #f7f7f7 0%,#ffffff 100%); /* W3C */
-	box-shadow:inset 1px 1px 3px #d8d8d8;
-	padding: 10px;
-	font-size: 16px;
-	font-weight: normal;
-	width: 250px;
-	color: #d9d9d9;
-	height: 20px;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border: 1px solid #f0f0f0;
-	text-shadow: -1px -1px 1px #fff;
-}
-*/
-
-
-textarea{
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	padding: 10px;
-	font-size: 16px;
-	color: #d9d9d9;
-	font-family: Helvetica, Arial;
-	width: 250px;
-}
 
 
 /*Mai jos ai <960px. Rescrii doar ce trebuie rescris, nu tot. doar clasele care le vrei ajustate.*/
